[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Menu/GameJam Asset/Menu Assets/pixil-frame-0 (6).png" type="Texture" id=1]
[ext_resource path="res://Characters/Sprites/DinoSprites - mort.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menu/GameJam Asset/Menu Assets/WASD.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menu/GameJam Asset/Menu Assets/ARROW.PNG" type="Texture" id=5]
[ext_resource path="res://Scenes/Menu/GameJam Asset/Menu Assets/unchecked.png" type="Texture" id=6]
[ext_resource path="res://Characters/Sprites/DinoSprites - vita.png" type="Texture" id=7]
[ext_resource path="res://Characters/Sprites/DinoSprites - tard.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Menu/GameJam Asset/Menu Assets/checked.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Menu/GameJam Asset/Menu Assets/IJKL.png" type="Texture" id=10]
[ext_resource path="res://Characters/Sprites/DinoSprites - doux.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Menu/Game/Play.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Green Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Red Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Yellow Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Blue Idle",
"speed": 10.0
} ]

[node name="Play" type="Control"]
anchor_left = 0.503
anchor_top = -0.02
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -515.072
margin_top = 13.0
margin_right = 2.0
margin_bottom = -1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back Button" type="TextureButton" parent="."]
margin_right = 160.0
margin_bottom = 98.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.359
anchor_right = 0.71
anchor_bottom = 0.445
margin_left = -92.6082
margin_top = 168.108
margin_right = -283.734
margin_bottom = 146.998
rect_pivot_offset = Vector2( 301.466, 131.511 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Sprite" type="AnimatedSprite" parent="PanelContainer"]
position = Vector2( 93.814, 111.197 )
scale = Vector2( 5, 5 )
frames = SubResource( 17 )
animation = "Blue Idle"
frame = 1
playing = true

[node name="ARROW" type="Sprite" parent="PanelContainer"]
position = Vector2( -36.2165, -51.2724 )
scale = Vector2( 2.11201, 2.3088 )
texture = ExtResource( 5 )

[node name="ARROW2" type="Sprite" parent="PanelContainer"]
position = Vector2( 224.19, -53.5924 )
rotation = -3.14159
scale = Vector2( 2.11201, 2.3088 )
texture = ExtResource( 5 )

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchor_right = 0.673
anchor_bottom = 0.653
margin_left = 601.0
margin_top = 168.0
margin_right = 80.502
margin_bottom = 19.506
rect_pivot_offset = Vector2( 301.466, 131.511 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Sprite" type="AnimatedSprite" parent="PanelContainer2"]
position = Vector2( 89.115, 106.48 )
scale = Vector2( 5, 5 )
frames = SubResource( 17 )
animation = "Red Idle"
frame = 1
playing = true
flip_h = true

[node name="IJKL" type="Sprite" parent="PanelContainer2"]
position = Vector2( 91.1456, -67.11 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="ARROW3" type="Sprite" parent="PanelContainer2"]
position = Vector2( -32.3589, -49.1818 )
scale = Vector2( 2.11201, 2.3088 )
texture = ExtResource( 5 )

[node name="ARROW4" type="Sprite" parent="PanelContainer2"]
position = Vector2( 222.439, -52.1603 )
rotation = -3.14159
scale = Vector2( 2.11201, 2.3088 )
texture = ExtResource( 5 )

[node name="WASD" type="Sprite" parent="."]
position = Vector2( 360.124, 100.49 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )

[node name="P1rdy" type="TextureButton" parent="."]
anchor_left = 0.363
anchor_right = 1.0
anchor_bottom = 0.757
margin_left = -55.8979
margin_top = 398.0
margin_right = -613.46
margin_bottom = 41.314
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1rdy2" type="TextureButton" parent="."]
anchor_left = 0.363
anchor_right = 1.0
anchor_bottom = 0.757
margin_left = 266.64
margin_top = 397.0
margin_right = -291.922
margin_bottom = 40.314
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
shortcut_in_tooltip = false
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="P1rdy" to="." method="_on_P1rdy_pressed"]
[connection signal="pressed" from="P1rdy2" to="." method="_on_P1rdy2_pressed"]
